--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.3",
-    "firebase": "^4.12.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
-    "socket.io": "^2.0.4",
-    "underscore": "^1.8.3"
+    "socket.io": "^2.1.0",
+    "underscore": "^1.8.3",
+    "uniqid": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
